axios added, api added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
+
+    <h1>Kpop Song Information</h1>
+    <div class="songInfo" id="songInfo"></div>
+
+    <button class="songBtn" type="button">Next Song</button>
+    
+    
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
