button event listener added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Kpop Song Information</h1>
     <div class="songInfo" id="songInfo"></div>
 
-    <button class="songBtn" type="button">Next Song</button>
+    <button id="songBtn" type="button">Next Song</button>
     
     
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
